# libcifpp

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CMakeLists.txt  Config.cmake.in  GNUmakefile.in  README.md  aclocal.m4  changelog  configure  configure.ac  libcif++.pc.in  libcifpp.pc.in
.github/workflows/: build-documentation.yml  cmake-multi-platform.yml
cmake/: AddGitSubmodule.cmake  FindAtomic.cmake  FindFilesystem.cmake  cifpp-config.cmake.in  cifppConfig-boost-regex.cmake.in  cifppConfig.cmake  cifppConfig.cmake.in  test-rx.cpp
config-tests/: boost-regex-test.cpp  clipper-test.cpp  cpp-17-test.cpp
data/: ccd-subset.cif
debian/: changelog  control  copyright  rules  watch
debian/patches/: install-at-destdir  series
debian/source/: options
debian/upstream/: metadata
docs/: CMakeLists.txt  Doxyfile.in  basics.rst  bitsandpieces.rst  compound.rst  conf.py  conf.py.in  index.rst  model.rst  resources.rst  symmetry.rst
examples/: .1cbs.cif.gz.swp  CMakeLists.txt  example.cpp  makefile
include/: cif++.hpp
include/cif++/: AtomShape.h  AtomShape.hpp  AtomType.h  AtomType.hpp  BondMap.h  BondMap.hpp  Cif++-v2.hpp  Cif++.h  Cif++.hpp  Cif2PDB.h  Cif2PDB.hpp  CifParser.h  CifParser.hpp  CifUtils.h  CifUtils.hpp  CifValidator.h  CifValidator.hpp  Compound.h  Compound.hpp  Config.h  Config.hpp  Config.hpp.in  DistanceMap.h  DistanceMap.hpp  Edia.h  FixDMC.hpp  MapMaker.h  MapMaker.hpp  Matrix.hpp  PDB2Cif.h  PDB2Cif.hpp  PDB2CifRemark3.h  PDB2CifRemark3.hpp  PeptideDB.h  Point.h  Point.hpp  ResolutionCalculator.h  ResolutionCalculator.hpp  Secondary.h  Secondary.hpp  (+44 more)
include/cif++/cif/: category.hpp  condition.hpp  datablock.hpp  dictionary_parser.hpp  file.hpp  forward_decl.hpp  item.hpp  iterator.hpp  list.hpp  parser.hpp  row.hpp  validate.hpp
include/cif++/pdb/: Cif2PDB.hpp  PDB2Cif.hpp  PDB2CifRemark3.hpp  TlsParser.hpp  cif2pdb.hpp  io.hpp  pdb2cif.hpp  pdb2cif_remark_3.hpp  tls.hpp
include/cif++/structure/: AtomType.hpp  BondMap.hpp  Compound.hpp  DSSP.hpp  Structure.hpp  Symmetry.hpp  TlsParser.hpp
include/cif++/v2/: category.hpp  condition.hpp  datablock.hpp  dictionary_parser.hpp  file.hpp  forward_decl.hpp  item.hpp  iterator.hpp  parser.hpp  row.hpp  validate.hpp  writer.hpp
msvc/: libcifpp.sln  libcifpp.vcxproj  libcifpp.vcxproj.filters
msvc/unit-test/: unit-test.vcxproj  unit-test.vcxproj.filters
rsrc/: ccd-subset.cif  curves.xml  isomers.txt  mmcif_ddl.dic
src/: AtomShape.cpp  AtomType.cpp  BondMap.cpp  Cif++.cpp  Cif2PDB.cpp  CifParser.cpp  CifUtils.cpp  CifValidator.cpp  Compound.cpp  Config-cmake.hpp.in  Config.hpp.in  DistanceMap.cpp  Edia.cpp  FixDMC.cpp  MapMaker.cpp  PDB2Cif.cpp  PDB2CifRemark3.cpp  PeptideDB.cpp  Point.cpp  ResolutionCalculator.cpp  Secondary.cpp  Statistics.cpp  Structure.cpp  SymOpTable_data.cpp  SymOpTable_data.hpp  Symmetry.cpp  TlsParser.cpp  atom_type.cpp  category.cpp  cif++.cpp  cif-parser.cpp  cif-utils.cpp  cif-validator.cpp  cif2pdb.cpp  compound.cpp  condition.cpp  datablock.cpp  dictionary_parser.cpp  file.cpp  item.cpp  (+13 more)
src/cif/: category.cpp  condition.cpp  datablock.cpp  dictionary_parser.cpp  file.cpp  item.cpp  parser.cpp  row.cpp  validate.cpp
src/dssp/: DSSP.cpp
src/pdb/: Cif2PDB.cpp  PDB2Cif.cpp  PDB2CifRemark3.cpp  cif2pdb.cpp  pdb2cif.cpp  pdb2cif_remark_3.cpp  pdb2cif_remark_3.hpp  pdb_record.hpp  reconstruct.cpp  tls.cpp  validate-pdbx.cpp
src/structure/: AtomType.cpp  BondMap.cpp  Compound.cpp  DSSP.cpp  Secondary.cpp  Structure.cpp  SymOpTable_data.hpp  Symmetry.cpp  TlsParser.cpp
src/v2/: category.cpp  condition.cpp  dictionary_parser.cpp  item.cpp  parser.cpp  row.cpp  validate.cpp
test/: .1juh.cif.gz.swp  CMakeLists.txt  HEM.cif  REA.cif  REA_v2.cif  RXA.cif  UN_.cif  dssp-test.cpp  format-test.cpp  io-test.cpp  model-test.cpp  pdb2cif-test.cpp  reconstruction-test.cpp  rename-compound-test.cpp  spinner-test.cpp  structure-test.cpp  sugar-test.cpp  test-main.cpp  test-main.hpp  unit-3d-test.cpp  unit-test.cpp  unit-v2-test.cpp  validate-pdbx-test.cpp
test/reconstruct/: 1cbs-stripped-2.cif  1cbs-stripped.cif  cif2fasta-1cbs_insert.cif  cif2fasta-1cbs_mutate.cif  cif2fasta-1cbs_mutate_extend.cif  phenix.cif
tools/: symop-map-generator.cpp  update-dictionaries-script  update-dictionary-script  update-dictionary-script.in  update-libcifpp-data.in
